feat: token summary api
