# main.go
@@ -79,12 +79,16 @@ func main() {
 
 	router.GET("/address/:address/balance", controller.GetBalanceByAddress)
 
+	router.GET("/ft/codehash/all", controller.ListAllFTCodeHash)
+	router.GET("/ft/codehash-info/:codehash", controller.ListFTSummary)
 	router.GET("/ft/info/all", controller.ListAllFTInfo)
 	router.GET("/ft/transfer-volume/:codehash/:genesis", controller.GetFTTransferVolumeInBlockRange)
 	router.GET("/ft/owners/:codehash/:genesis", controller.ListFTOwners)
 	router.GET("/ft/summary/:address", controller.ListAllFTBalanceByOwner)
 	router.GET("/ft/balance/:codehash/:genesis/:address", controller.GetFTBalanceByOwner)
 
+	router.GET("/nft/codehash/all", controller.ListAllNFTCodeHash)
+	router.GET("/nft/codehash-info/:codehash", controller.ListNFTSummary)
 	router.GET("/nft/info/all", controller.ListAllNFTInfo)
 	router.GET("/nft/transfer-volume/:codehash/:genesis/:tokenid", controller.GetNFTTransferTimesInBlockRange)
 	router.GET("/nft/owners/:codehash/:genesis", controller.ListNFTOwners)
